tests/NormalTests/paczka1/small_fuzzy/62858456.err
Error in line 1: N4Tc7iLQo S379 11,7
Error in line 4: Ja5grC S379 42,7
